# electricity_planner

./: .dockerignore  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .release-notes-v6.6.0.md  .release-notes-v6.6.1.md  .release-notes-v6.6.2.md  3PHASE_DASHBOARD_README.md  CARD_USAGE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD.md  DYNAMIC_THRESHOLD.md  Dockerfile.tests  FIX_SOLAR_ALLOCATION.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  README.md  RELEASE_NOTES_4.2.0.md  TROUBLESHOOTING.md  automationExample.yaml  automationExample_power_sensor.yaml  electricity_planner_3phase_dashboard.yaml  electricity_planner_dashboard.yaml  hacs.json  info.md  lovelace-card.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  test_dashboard_debug.py
.devcontainer/: Dockerfile  devcontainer.json
custom_components/: __init__.py
docs/: architecture.md  decision-engine.md  development.md  index.md  strategies.md
tests/: README.md  conftest.py  iteration_review.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_dashboard.py  test_dashboard_coverage.py  test_dashboard_yaml.py  test_decision_engine.py  test_decision_engine_car.py  test_decision_engine_errors.py  test_decision_engine_power.py  test_decision_engine_trees.py  test_diagnostics.py  test_dynamic_threshold.py  test_forecast_summary.py  test_helpers.py  test_init.py  test_manual_override.py  test_nordpool_sensor.py  test_number.py  test_number_coverage.py  test_peak_threshold.py  test_permissive_mode.py  test_sensor.py  test_small_coverage_edges.py  test_strategies_smoke.py  test_switch.py  test_switch_coverage.py  test_three_phase_edge_cases.py
tools/: dashboard_debug.py
(+55 files in other folders)
